test/spec/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/func.wast:337:65: type mismatch of function result. got i32, expected i64
  (module (func $type-local-num-vs-num (result i64) (local i32) (get_local 0)))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:341:61: type mismatch of convert op. got f32, expected i32
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
                                                            ^
assert_invalid error:
  third_party/testsuite/func.wast:345:65: type mismatch of unary op. got i64, expected f64
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:353:65: type mismatch of function result. got i32, expected i64
  (module (func $type-param-num-vs-num (param i32) (result i64) (get_local 0)))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:357:61: type mismatch of convert op. got f32, expected i32
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
                                                            ^
assert_invalid error:
  third_party/testsuite/func.wast:361:65: type mismatch of unary op. got i64, expected f64
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:369:12: type mismatch of function result. got void, expected i32
  (module (func $type-empty-i32 (result i32)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:373:12: type mismatch of function result. got void, expected i64
  (module (func $type-empty-i64 (result i64)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:377:12: type mismatch of function result. got void, expected f32
  (module (func $type-empty-f32 (result f32)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:381:12: type mismatch of function result. got void, expected f64
  (module (func $type-empty-f64 (result f64)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:387:5: type mismatch in nop. got void, expected i32
    (nop)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:393:5: type mismatch of function result. got f32, expected i32
    (f32.const 0)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:399:28: type mismatch in nop. got void, expected i32
    (return (i32.const 1)) (nop)
                           ^
assert_invalid error:
  third_party/testsuite/func.wast:405:28: type mismatch of function result. got f32, expected i32
    (return (i32.const 1)) (f32.const 0)
                           ^
assert_invalid error:
  third_party/testsuite/func.wast:411:26: type mismatch in nop. got void, expected i32
    (br 0 (i32.const 1)) (nop)
                         ^
assert_invalid error:
  third_party/testsuite/func.wast:417:26: type mismatch of function result. got f32, expected i32
    (br 0 (i32.const 1)) (f32.const 0)
                         ^
assert_invalid error:
  third_party/testsuite/func.wast:424:5: type mismatch of return. got void, expected i32
    (return)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:430:5: type mismatch of return. got void, expected i32
    (return) (i32.const 1)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:436:13: type mismatch of return. got i64, expected i32
    (return (i64.const 1)) (i32.const 1)
            ^
assert_invalid error:
  third_party/testsuite/func.wast:442:13: type mismatch of return. got i64, expected i32
    (return (i64.const 1)) (return (i32.const 1))
            ^
assert_invalid error:
  third_party/testsuite/func.wast:448:36: type mismatch of return. got f64, expected i32
    (return (i32.const 1)) (return (f64.const 1))
                                   ^
assert_invalid error:
  third_party/testsuite/func.wast:455:5: type mismatch of br value. got void, expected i32
    (br 0)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:461:5: type mismatch of br value. got void, expected i32
    (br 0) (i32.const 1)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:467:11: type mismatch of br value. got i64, expected i32
    (br 0 (i64.const 1)) (i32.const 1)
          ^
assert_invalid error:
  third_party/testsuite/func.wast:473:11: type mismatch of br value. got i64, expected i32
    (br 0 (i64.const 1)) (br 0 (i32.const 1))
          ^
assert_invalid error:
  third_party/testsuite/func.wast:479:32: type mismatch of br value. got f64, expected i32
    (br 0 (i32.const 1)) (br 0 (f64.const 1))
                               ^
assert_invalid error:
  third_party/testsuite/func.wast:486:12: type mismatch of br value. got void, expected i32
    (block (br 1)) (br 0 (i32.const 1))
           ^
assert_invalid error:
  third_party/testsuite/func.wast:492:18: type mismatch of br value. got i64, expected i32
    (block (br 1 (i64.const 1))) (br 0 (i32.const 1))
                 ^
82/82 tests passed.
;;; STDOUT ;;)
